# cockamamie

./: CMakeLists.txt  README.md  frag.glsl  frag2.glsl  main.cpp  project.json
src/: TwEventGLFW3.cpp  TwEventGLFW3.h  keyframe.cpp  keyframe.h  keytrack.cpp  keytrack.h  main.cpp  shader.cpp  shader.h  timeline.cpp  timeline.h
